<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <!--Código para tela gerar, e sem aparecer a barra no canto da tela.

    Implementação do backgroud do app utilizando o degrade em /background.-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        tools:context=".FromLogin">


        <!--Logo do App inserido em drawable/logo
        Utilizando as constraints para formatar -->


        <ImageView
            android:id="@+id/logo"
            android:layout_width="194dp"
            android:layout_height="150dp"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <!--ImageView do conteiner utilizando o Style para o container
        onde ficará os componentes do App.

        Constraint para posicionar o container logo abaixo da logo.


        EditText para o campo Email utilizando o Style "Edit_Text". -->

        <ImageView
            android:id="@+id/containerComponents"
            style="@style/ContainerComponents"
            android:layout_width="362dp"
            android:layout_height="294dp"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logo" />

        <EditText
            android:id="@+id/edit_email"
            style="@style/Edit_Text"
            android:drawableRight="@drawable/ic_email"
            android:hint="Email"
            android:layout_marginTop="30dp"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="@id/containerComponents"
            app:layout_constraintStart_toStartOf="@id/containerComponents"
            app:layout_constraintTop_toTopOf="@id/containerComponents" />
        <!--Constraints usando o container como medida para posicionar o EditText. -->


        <!-- Edit text para o campo Senha utilizando o mesmo style "Edit_Text". -->

        <!--Constraints usando o container como medida para posicionar o EditText. -->


        <!-- Button para o botão salvar, utilizando o style -->

        <!-- Progressbar para mostrar interação ao tocar no botão de salvar. -->

        <!-- Text view onde irá direcionar o usuário para a segunda tela de cadastro.-->

        <EditText
            android:id="@+id/edit_senha"
            style="@style/Edit_Text"
            android:layout_marginTop="16dp"
            android:drawableRight="@drawable/ic_eye"
            android:hint="Senha"
            android:inputType="numberPassword"
            app:layout_constraintEnd_toEndOf="@id/containerComponents"
            app:layout_constraintStart_toStartOf="@id/containerComponents"
            app:layout_constraintTop_toBottomOf="@id/edit_email" />

        <Button
            android:id="@+id/bt_entrar"
            style="@style/Button"
            android:layout_marginTop="20dp"
            android:background="@drawable/button"
            android:text="@string/entrar"
            app:backgroundTint="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_senha" />

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/containerComponents" />



        <TextView
            android:id="@+id/text_tela_cadastro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/text_cadastro"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/progressbar" />

        <!--Recuperação de senha-->

        <TextView
            android:id="@+id/text_recuperar_senha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/text_recuperar_senha"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBaseline_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.853"
            app:layout_constraintStart_toStartOf="@id/containerComponents"
            app:layout_constraintTop_toBottomOf="@id/containerComponents"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>